[gd_scene load_steps=11 format=2]

[ext_resource path="res://menus/main/themes/main.tres" type="Theme" id=1]
[ext_resource path="res://menus/main/scripts/main-menu.gd" type="Script" id=2]
[ext_resource path="res://menus/main/state_scripts/idle.gd" type="Script" id=3]
[ext_resource path="res://menus/main/state_scripts/process.gd" type="Script" id=4]
[ext_resource path="res://menus/main/state_scripts/paused.gd" type="Script" id=5]
[ext_resource path="res://menus/main/state_scripts/exit.gd" type="Script" id=6]
[ext_resource path="res://menus/common/themes/menu-buttons.tres" type="Theme" id=7]
[ext_resource path="res://common_assets/fonts/gold_panda/gold-panda.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://common_assets/prefabs/transition_screen/scenes/TransitionScreen.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
bgm = "res://common_assets/music/bensound/bensound-jazzyfrenchy.ogg"

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Process" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Paused" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Exit" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.388235, 0.580392, 0.929412, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 219.02
margin_bottom = -392.98

[node name="GameTitle" type="Label" parent="CenterContainer"]
margin_left = 320.0
margin_right = 960.0
margin_bottom = 108.0
text = "PONG Party"
align = 1
valign = 1

[node name="MainButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 200 )
theme = ExtResource( 7 )
custom_constants/separation = 10
alignment = 1

[node name="PlayGame" type="Button" parent="MainButtonContainer"]
margin_top = 15.0
margin_right = 200.0
margin_bottom = 65.0
rect_min_size = Vector2( 150, 50 )
text = "Play Game"

[node name="Settings" type="Button" parent="MainButtonContainer"]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 150, 50 )
text = "Settings"

[node name="ExitGame" type="Button" parent="MainButtonContainer"]
margin_top = 135.0
margin_right = 200.0
margin_bottom = 185.0
rect_min_size = Vector2( 150, 50 )
text = "Exit Game"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -29.0
margin_right = -10.0
margin_bottom = -10.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Version"

[node name="TransitionScreen" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="MainButtonContainer/PlayGame" to="." method="_on_PlayGame_pressed"]
[connection signal="pressed" from="MainButtonContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainButtonContainer/ExitGame" to="." method="_on_ExitGame_pressed"]
